# HSR_Prog3

./: .gitignore  README.md
01_HelloWorld/HelloWorld/HelloWorld/: main.cpp  sayHello.cpp  sayHello.h
01_HelloWorld/HelloWorld/HelloWorld.xcodeproj/: project.pbxproj
01_HelloWorld/HelloWorld/HelloWorld.xcodeproj/project.xcworkspace/xcshareddata/: HelloWorld.xccheckout
01_HelloWorld/HelloWorld/HelloWorld.xcodeproj/project.xcworkspace/xcuserdata/theowinter.xcuserdatad/: UserInterfaceState.xcuserstate
01_HelloWorld/HelloWorld/HelloWorld.xcodeproj/xcuserdata/theowinter.xcuserdatad/xcschemes/: HelloWorld.xcscheme  xcschememanagement.plist
01_helloworld/: CMakeLists.txt  helloworld.cpp  helloworld.h  main.cpp
02_basics/: CMakeLists.txt  CountingTools.cpp  CountingTools.h  main.cpp
02_basics/Algorithms/: AlgorithmSandbox.cpp  AlgorithmSandbox.h
02_basics/Classes/: ClassSandbox.cpp  ClassSandbox.h  Date.cpp  Date.h
02_basics/Containers/: ContainerPlayground.cpp  ContainerPlayground.h
02_basics/Functions/: FunctionSandbox.cpp  FunctionSandbox.h
02_basics/Hello/: Hello.cpp  Hello.h
02_basics/Sequences/: SequencePlayground.cpp  SequencePlayground.h
02_basics/Variables/: VariableSandbox.cpp  VariableSandbox.h
03_Exams/: CMakeLists.txt  main.cpp
03_Exams/HS2013/: Book.h  BookImple.h  constCorrect.cpp  constCorrect.h  sbInBoost.cpp  sbInBoost.h  sb_iterator.cpp  sb_iterator.h  stammbruch_iterator.h
03_Exams/HS2014/: bindAndFind.cpp  bindAndFind.h  constCorrect.cpp  constCorrect.h  deck.h  inheritance.cpp  inheritance.h  sackTemplate.cpp  sackTemplate.h  setkAndSet.cpp  setkAndSet.h
